# mantis

./: .gitignore  .mantis.example.yaml  CLAUDE.md  README.md  doctor.sh  install.sh  pyproject.toml  setup.sh
agents/: deep-reviewer.md  deobfuscator.md  fix-author.md  sast-orchestrator.md  slice-extractor.md  toast-hunter.md  triage-analyst.md
checklists/: otg-business-logic.md
commands/: audit.md
mantis/: __init__.py  __main__.py  _treesitter.py  agents.py  callgraph.py  cli.py  config.py  deep.py  doctor.py  exporters.py  fix.py  history.py  init_wizard.py  inventory.py  providers.py  reachability.py  report.py  runner.py  sast.py  sast_cache.py  scan.py  since.py  slice.py  toast.py  triage.py  updates.py
rules/: _manifest.yaml
rules/android/: android-advanced-pentesting-patterns.yaml  android-dependency-security.yaml  android-manifest-security-enhanced.yaml  cve-binder-exploitation.yaml  cve-hardware-hal.yaml  cve-input-validation.yaml  cve-memory-corruption.yaml  cve-network-communication.yaml  cve-storage-filesystem.yaml  cve-ui-social-engineering.yaml  mastg-random-number-generation-improved.yaml  mastg-storage-crypto-tests-improved.yaml  mastg-storage-crypto-tests.yaml  masvs-crypto-weak-algorithms-improved.yaml  masvs-crypto-weak-algorithms.yaml  masvs-network-insecure-communication-improved.yaml  masvs-storage-insecure-sharedpreferences-improved.yaml  masvs-storage-insecure-sharedpreferences.yaml  owasp-m3-authentication-authorization.yaml  owasp-m4-input-validation.yaml  owasp-m4-sql-injection-improved.yaml  owasp-m4-webview-improved.yaml  owasp-m5-m9-additional-patterns.yaml  owasp-m7-binary-protections-improved.yaml  owasp-m7-logging-improved.yaml  owasp-m8-security-misconfiguration-comprehensive.yaml  owasp-m8-security-misconfiguration-improved.yaml
rules/cross-platform/: flutter-auth-insecure.yaml  flutter-binary-protection.yaml  flutter-binary-protections.yaml  flutter-config-security.yaml  flutter-crypto-insecure.yaml  flutter-dependency-security.yaml  flutter-network-insecure.yaml  owasp-m1-credential-leakage.yaml  owasp-m2-supply-chain-security.yaml  owasp-m3-authentication-authorization.yaml  owasp-m4-flutter-injection-vulnerabilities.yaml  owasp-m6-privacy-controls.yaml  owasp-m8-security-misconfiguration.yaml  react-native-auth-insecure.yaml  react-native-binary-protection.yaml  react-native-binary-protections.yaml  react-native-config-security.yaml  react-native-dependency-security.yaml  react-native-network-insecure.yaml  react-native-storage-insecure.yaml
rules/ios/: cve-hardware-accessories.yaml  cve-imageio-processing.yaml  cve-media-processing.yaml  cve-memory-pointer-safety.yaml  cve-webkit-exploitation.yaml  ios-critical-storage-privacy.yaml  ios-dependency-security.yaml  ios-pentesting-patterns.yaml  mastg-logging-improved.yaml  (+13 more)
rules/packs/: cve.yaml  (+9 more)
scripts/: pack_compose.py
tests/: test_agents.py  test_callgraph.py  test_cli.py  test_config.py  test_deep.py  test_fix.py  test_inventory.py  test_inventory_extra.py  test_providers.py  test_reachability.py  test_report.py  test_runner.py  test_sast.py  test_scan.py  test_slice.py  test_toast.py  test_treesitter.py  test_triage.py  test_triage_dual.py
(+66 files in other folders)
